--- a/pages/login.css
+++ b/pages/login.css
@@ -5,18 +5,21 @@ body {
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
+    background-color: #00DBDE;
+    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
 }
 
 .container {
     border: 1px solid black;
     display: flex;
     flex-flow: column;
-    width: 28%;
-    gap: 5rem;
+    width: 34%;
+    gap: 2.5rem;
     height: 600px;
-    justify-content: space-around;
+    justify-content: center;
     min-width: 350px;
     border-radius: 10px;
+    background-color: white;
 }
 
 .header {
@@ -49,6 +52,7 @@ input {
     font-size: 1rem;
     font-weight: lighter;
     cursor: pointer;
+    font-family: monospace;
 }
 
 .all-Inputs-Container > div:not(:last-child){
@@ -57,10 +61,45 @@ input {
 }
 
 label {
+    font-size: 1.3rem;
+    font-family: 'Special Elite', cursive;
+
+}
+
+input {
+    border: none;
+    padding: 1rem;
     font-size: 1rem;
     font-family: 'Special Elite', cursive;
 }
 
-input {
-    
+.allSignIns {
+    display: flex;
+    flex-direction: column;
+}
+
+.allSignIns > a {
+    margin: 1rem;
+}
+
+.login-button {
+    padding: 1rem;
+    border-radius: 30px;
+    background-color: #00DBDE;
+    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+    text-decoration: none;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.signup-button {
+    text-decoration: none;
+    color: black;
+    text-align: center;
+}
+
+form {
+    border-bottom: 1px solid grey
 }
