--- a/pages/login.css
+++ b/pages/login.css
@@ -5,8 +5,8 @@ body {
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
-    background-color: #00DBDE;
-    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+    background-image: url('../images/pic1.jpeg');
+    background-size: cover;
 }
 
 .container {
